--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <base href="/">
-    <title>User-Management</title>
+    <title>User-Management Full-Stack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- Favicons -->
@@ -26,7 +26,7 @@
 
     <div class="text-center mt-4">
         <p>
-            <a href="#" target="_top">User-Management</a>
+            <a href="#" target="_top">User-Management Full-Stack</a>
         </p>
     </div>
     
